--- a/2.kanban/package.json
+++ b/2.kanban/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1.basic",
+  "name": "2.kanban",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "zod": "^3.23.8"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
